istio-day2/1-understand-istio/labs/07/default-sidecar-web-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: istioinaction
spec:
  egress:
  - hosts:
    - "./web-api.istioinaction"
    - "istio-system/*"
