istio-day2/1-understand-istio/labs/07/default-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default-sleep
  namespace: default
spec:
  egress:
  - hosts:
    - "istioinaction/web-api.istioinaction.svc.cluster.local"
    - "istio-system/*"
